2008-09-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/msl.c: Applied MSL patch from graphicsmagick-bugs list to
	correct handling of geometry x,y values by setting gravity
	attribute to ForgetGravity.

2008-09-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (BenchmarkImageCommand): Restore original
	client name for each loop so that it is not extended further for
	each iteration.

2008-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/{rwblob.c, rwfile.c}: use DestroyImageList() rather than
	DestroyImage().

2008-06-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (quantize): Error measurement support was
	being performed incorrectly.  SyncImage() is not needed here.

2008-06-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageInfo): Extend the list of extensions to
	exclude to include all virtual delegates and coders for
	pseudo-formats.  Synced up with implementation from 1.2 branch.

2008-06-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.1.14 released.
	* coders/pdf.c (ReadPDFImage): Fix bounding-box issue with rotated
	PDFs.

2008-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c (ReadXCFImage): Back-port more robust version
	from GraphicsMagick 1.2.
	* coders/pict.c (ReadPICTImage): Back-port more robust version
	from GraphicsMagick 1.2.
	* coders/cineon.c (ReadCINEONImage): Back-port more robust version
	from GraphicsMagick 1.2.
	* magick/gem.c (GenerateNoise): Poisson noise generation was
	taking excessively long and producing wrong results.

2008-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.1.13 released.

2008-05-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c (CompositeImage): Don't leak displacement
	image when Displacement composition is used.
	* magick/{annotate.c,composite.c,paint.c,render.c}