@@ -1,4 +1,4 @@
-.TH gm 1 "2008/02/23" "GraphicsMagick"
+.TH gm 1 "2008/11/02" "GraphicsMagick"
 .TP
 .in 15
 .in 15
@@ -1430,9 +1430,9 @@ reflect the scanlines in the horizontal direction.
 .B "-font \fI<name>"\fP
 \fRuse this font when annotating the image with text
 
-You can tag a font to specify whether it is a PostScript, TrueType, or OPTION1
+You can tag a font to specify whether it is a PostScript, TrueType, or X11
 font.  For example, Arial.ttf is a TrueType font, ps:helvetica
-is PostScript, and x:fixed is OPTION1.
+is PostScript, and x:fixed is X11.
 .TP
 .B "-foreground \fI<color>"\fP
 \fRdefine the foreground color
@@ -2247,7 +2247,7 @@ snapshot.
 \fRefficiently determine image characteristics
 .TP
 .B "-pointsize \fI<value>"\fP
-\fRpointsize of the PostScript, OPTION1, or TrueType font
+\fRpointsize of the PostScript, X11, or TrueType font
 .TP
 .B "-preview \fI<type>"\fP
 \fRimage preview type
@@ -2736,8 +2736,8 @@ Specifies the name of the preferred font to use in fixed (typewriter style)
 formatted text.  The default is 14 point \fICourier\fP.
 
 You can tag a font to specify whether it is a PostScript, TrueType, or
-OPTION1 font.  For example, Courier.ttf is a TrueType font
-and x:fixed is OPTION1.
+X11 font.  For example, Courier.ttf is a TrueType font
+and x:fixed is X11.
 .TP
 .B "-texture \fI<filename>"\fP
 \fRname of texture to tile onto the image background
@@ -4558,7 +4558,7 @@ Options, above.
 \fRefficiently determine image characteristics
 .TP
 .B "-pointsize \fI<value>"\fP
-\fRpointsize of the PostScript, OPTION1, or TrueType font
+\fRpointsize of the PostScript, X11, or TrueType font
 .TP
 .B "-preview \fI<type>"\fP
 \fRimage preview type
@@ -7097,7 +7097,7 @@ Options, above.
 \fRefficiently determine image characteristics
 .TP
 .B "-pointsize \fI<value>"\fP
-\fRpointsize of the PostScript, OPTION1, or TrueType font
+\fRpointsize of the PostScript, X11, or TrueType font
 .TP
 .B "-quality \fI<value>"\fP
 \fRJPEG/MIFF/PNG compression level
@@ -7417,7 +7417,7 @@ Options, above.
 \fR(This option has been replaced by the -fill option)
 .TP
 .B "-pointsize \fI<value>"\fP
-\fRpointsize of the PostScript, OPTION1, or TrueType font
+\fRpointsize of the PostScript, X11, or TrueType font
 .TP
 .B "-profile \fI<filename>"\fP
 \fRadd ICM, IPTC, or generic profile  to image
@@ -7791,7 +7791,7 @@ Options, above.
 \fR(This option has been replaced by the -fill option)
 .TP
 .B "-pointsize \fI<value>"\fP
-\fRpointsize of the PostScript, OPTION1, or TrueType font
+\fRpointsize of the PostScript, X11, or TrueType font
 .TP
 .B "-quality \fI<value>"\fP
 \fRJPEG/MIFF/PNG compression level
