@@ -21,6 +21,16 @@
 </tr>
 </table>
 <p>
+2008-11-02  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> configure.ac: Fix passing the --with-windows-font-dir option via
+<STRONG>DISTCHECK_CONFIG_FLAGS.</STRONG><BR>
+  <LI> magick/command.c (ConjureImageCommand): Return status was
+        inverted so one was returned for command success rather than zero.
+
+</UL>
+<p>
 2008-09-12  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
